Remove unused jvm-opts content from project.clj